fix z-index

--- a/src/app/sections/KrutorusAndCalc/KrutorusMain.module.css
+++ b/src/app/sections/KrutorusAndCalc/KrutorusMain.module.css
@@ -42,5 +42,4 @@
 /* контент поверх */
 .main > * {
     position: relative;
-    z-index: 2;
 }
